--- a/LuckyClover/LuckyClover.csproj
+++ b/LuckyClover/LuckyClover.csproj
@@ -2,22 +2,22 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net4.5</TargetFramework>
     <AssemblyName>clover</AssemblyName>
     <AssemblyTitle>幸运草</AssemblyTitle>
-    <Description>无依赖编译为linux-arm/linux-x86/windows，用于自动安装主流.NET运行时。</Description>
+    <Description>基于低版本运行时，自动安装主流.NET运行时。</Description>
     <Company>新生命开发团队</Company>
-    <Copyright>©2002-2021 NewLife</Copyright>
-    <Version>1.0.2021.1014</Version>
-    <FileVersion>1.0.2021.1014</FileVersion>
+    <Copyright>©2002-2022 NewLife</Copyright>
+    <Version>1.0.2022.0729</Version>
+    <FileVersion>1.0.2022.0729</FileVersion>
     <AssemblyVersion>1.0.*</AssemblyVersion>
     <Deterministic>false</Deterministic>
     <OutputPath>..\Bin</OutputPath>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     
-    <PublishTrimmed>true</PublishTrimmed>
-    <TrimMode>Link</TrimMode>
-    <TrimmerDefaultAction>link</TrimmerDefaultAction>
+    <!--<PublishTrimmed>true</PublishTrimmed>-->
+    <!--<TrimMode>Link</TrimMode>-->
+    <!--<TrimmerDefaultAction>link</TrimmerDefaultAction>-->
     <!--<IlcOptimizationPreference>Speed</IlcOptimizationPreference>
     <IlcFoldIdenticalMethodBodies>true</IlcFoldIdenticalMethodBodies>-->
     <InvariantGlobalization>true</InvariantGlobalization>
