列出所有已安装.NET Framework版本

--- a/LuckyClover/LuckyClover.csproj
+++ b/LuckyClover/LuckyClover.csproj
@@ -14,7 +14,8 @@
     <Deterministic>false</Deterministic>
     <OutputPath>..\Bin</OutputPath>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
-    
+    <LangVersion>latest</LangVersion>
+
     <!--<PublishTrimmed>true</PublishTrimmed>-->
     <!--<TrimMode>Link</TrimMode>-->
     <!--<TrimmerDefaultAction>link</TrimmerDefaultAction>-->
