--- a/Clover/Clover.vcxproj
+++ b/Clover/Clover.vcxproj
@@ -145,6 +145,9 @@
   <ItemGroup>
     <ClCompile Include="Clover.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="httplib.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
