安装助手从配置文件读取星尘服务器地址，在StarAgent安装时使用

--- a/Installer4/Installer4.csproj
+++ b/Installer4/Installer4.csproj
@@ -32,6 +32,7 @@
     <Compile Include="..\Installer\FrmMain.Designer.cs" Link="FrmMain.Designer.cs" />
     <Compile Include="..\Installer\Helper.cs" Link="Helper.cs" />
     <Compile Include="..\Installer\NetRuntime.cs" Link="NetRuntime.cs" />
+    <Compile Include="..\Installer\Setting.cs" Link="Setting.cs" />
     <Compile Include="..\Installer\VerInfo.cs" Link="VerInfo.cs" />
     <Compile Include="..\Installer\WindowsService.cs" Link="WindowsService.cs" />
   </ItemGroup>
