--- a/Installer/Installer.csproj
+++ b/Installer/Installer.csproj
@@ -65,6 +65,7 @@
     <Compile Include="NetRuntime.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Setting.cs" />
     <Compile Include="VerInfo.cs" />
     <Compile Include="WindowsService.cs" />
     <EmbeddedResource Include="FrmMain.resx">
