--- a/Installer4/Installer4.csproj
+++ b/Installer4/Installer4.csproj
@@ -47,7 +47,7 @@
 
   <ItemGroup>
     <PackageReference Include="NewLife.Core" Version="10.10.2024.501-net40" />
-    <PackageReference Include="NewLife.Stardust" Version="2.9.2024.402" />
+    <PackageReference Include="NewLife.Stardust" Version="2.9.2024.613-beta1015" />
   </ItemGroup>
 
   <ItemGroup>
