--- a/Installer45/Installer45.csproj
+++ b/Installer45/Installer45.csproj
@@ -48,7 +48,7 @@
 
   <ItemGroup>
     <PackageReference Include="NewLife.Core" Version="10.10.2024.601" />
-    <PackageReference Include="NewLife.Stardust" Version="2.9.2024.402" />
+    <PackageReference Include="NewLife.Stardust" Version="2.9.2024.613-beta1015" />
   </ItemGroup>
 
   <ItemGroup>
