--- a/Installer45/Installer45.csproj
+++ b/Installer45/Installer45.csproj
@@ -47,7 +47,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="NewLife.Stardust" Version="3.4.2025.601" />
+    <PackageReference Include="NewLife.Core" Version="11.5.2025.701" />
+    <PackageReference Include="NewLife.Stardust" Version="3.4.2025.701" />
   </ItemGroup>
 
   <ItemGroup>
