--- a/Clover/Clover.vcxproj.filters
+++ b/Clover/Clover.vcxproj.filters
@@ -45,4 +45,7 @@
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
 </Project>
