增加net48输出，用于测试

--- a/LuckyClover/LuckyClover.csproj
+++ b/LuckyClover/LuckyClover.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFrameworks>net20;net40;net45;net6.0;net8.0;net9.0-windows</TargetFrameworks>
+    <TargetFrameworks>net20;net40;net45;net48;net6.0;net8.0;net9.0-windows</TargetFrameworks>
     <AssemblyName>clover</AssemblyName>
     <AssemblyTitle>幸运草</AssemblyTitle>
     <Description>检测并安装主流.NET运行时，协助打包发布。</Description>
